k8s/healthcheck.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: huseyn047/spring-security-app:latest
          ports:
            - containerPort: 8099
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8099
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8099
            periodSeconds: 10
            failureThreshold: 5
