k8s/actuator.yml
apiVersion: v1
kind: Service
metadata:
  name: app-actuator
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - port: 30098
      targetPort: 8098
