k8s/combined.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shopping-app
  labels:
    app: online-shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: online-shopping
  template:
    metadata:
      labels:
        app: online-shopping
    spec:
      containers:
        - name: app
          image: huseyn047/spring-security-app:latest
          ports:
            - containerPort: 8098
          readinessProbe:
            httpGet:
              path:  /categories/1
              port: 8098
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path:  /categories/1
              port: 8098
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: online-shopping-service
spec:
  selector:
    app: online-shopping
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8098
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: my-db-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
